feat: removed dialog option box, removed EditableSnippet, added syntax highlighting, added delete button to Snippet, added edit button to Snippet, added resizing Snippet in edit mode, added line count, added maven shade plugin so that "mvn package" produces an executable fat jar, fixed bug where cancelling creation of snippet or group would throw an Exception